--- a/data-vis/index.qmd
+++ b/data-vis/index.qmd
@@ -1,5 +1,8 @@
 ---
 title: "Data visualisation style guide"
+format: html
+title-block-banner: "#3b66bc"
+title-block-banner-color: "white"
 ---
 
 This data visualisation style guide has been developed to help TASO, our partners, and the wider sector to create impactful and effective charts. It is designed to provide clear, accessible guidelines that can be applied using the data visualisation tool of your choice. We welcome your feedback on this guidance. We view this as an iterative document that will evolve as we learn more about which elements are most helpful. Please let us know what you think: [luke.arundel\@taso.org.uk](mailto:luke.arundel@taso.org.uk).
