--- a/coding-good-practice/index.qmd
+++ b/coding-good-practice/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Coding good practice"
+subtitle: "Practical tips for clean, readable and shareable scripts"
 format: html
 title-block-banner: "#3b66bc"
 title-block-banner-color: "white"
