--- a/contact.qmd
+++ b/contact.qmd
@@ -1,5 +1,8 @@
 ---
 title: "Contact point"
+format: html
+title-block-banner: "#3b66bc"
+title-block-banner-color: "white"
 ---
 
 We view this guide as an iterative resource and want to emphasise the valuable role feedback plays in its improvement. Your insights are crucial to refining and enhancing this resource. We encourage you to share your thoughts, suggestions and experiences with us, to ensure the ongoing relevance and effectiveness of this guide. For any inquiries, comments, or feedback, you can contact Luke Arundel at [luke.arundel\@taso.org.uk](mailto:luke.arundel@taso.org.uk).
