--- a/data-vis/index.qmd
+++ b/data-vis/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Data visualisation style guide"
+subtitle: A practical guide for engaging and consistent charts
 format: html
 title-block-banner: "#3b66bc"
 title-block-banner-color: "white"
